refactor: remove sqlTemplate and mysql client module